# agrovoz

./: .claudeignore  .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude/: settings.json
.github/workflows/: ci.yml
app/: config.py  db.py  llm.py  main.py  telegram.py
app/adapters/inbound/: api.py  auth.py  presenters.py
app/config/: .env.example  container.py  settings.py
docs/: ABOUT.md  ARCHITECTURE.md  DEMO.md  SETUP.md  USER_GUIDE.md  decisions.md  funcionabilidad.md  mvp_asesor_gip_v3.md
docs/historico/: agrovoz_prototipo.html  spike_main.py
prompts/: extraction_v1.md  extraction_v2.md
pwa/: .env.example  .gitignore  .npmrc  eslint.config.js  index.html  package-lock.json  package.json  vite.config.js
pwa/src/: App.jsx  AppBar.jsx  BottomNav.jsx  ConfirmDialog.jsx  Correct.jsx  Detail.jsx  Dictate.jsx  History.jsx  Home.jsx  Icon.jsx  Login.jsx  PendingList.jsx  Privacy.jsx  RecordActions.jsx  RecordCard.jsx  Recorder.jsx  ReviewForm.jsx  Settings.jsx  TodayList.jsx  Validation.jsx  api.js  index.css  main.jsx  pendingTakes.js  supabase.js  useSession.js
spike/: main.py
supabase/migrations/: 20260612094136_estructura_inicial_rls.sql  20260630120000_equipment_alias_unique_per_holding.sql  20260702093000_effectiveness_assessment_fields.sql  20260713100000_supersedes_intervention_id.sql
tests/: generate_sample_prescription.py  generate_sample_validation.py  test_api.py  test_assessment_service.py  test_auth.py  test_campaign_validation_service.py  test_correction_service.py  test_execution_service.py  test_fuzzy_lookup.py  test_registration_pipeline.py  test_reportlab_pdf.py  test_schemas.py  test_serialize_columns.py  test_states.py  test_validation_service.py
(+27 files in other folders)
