[project]
name = "olek-bot-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dashscope>=1.25.21",
    "fastapi>=0.136.3",
    "httpx>=0.28.1",
    "oss2>=2.19.1",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "python-dotenv>=1.2.2",
    "reportlab>=4.5.1",
    "supabase>=2.30.1",
    "uvicorn>=0.48.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.0",
]
